<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculadora</string>
    <string name="zero">0</string>
    <string name="action_settings">Settings</string>
    <string name="numero1">Numero 1</string>
    <string name="numero2">Numero 2</string>
    <string name="resultado">Resultado</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicacion">*</string>
    <string name="division">/</string>
    <string name="title_activity_resultado">ResultadoActivity</string>

</resources>
