<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.calculadoraintenciones.MainActivity" >
  <EditText
        android:id="@+id/numero1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="number"
        style="@style/lblNumber.Black" />

    <TextView
        android:id="@+id/textView3"
        android:layout_alignLeft="@+id/numero1"
        android:layout_below="@+id/numero1"
        android:layout_marginTop="23dp"
        android:text="@string/numero2"
        style="@style/lblNumber.Blue"
         />

    <EditText
        android:id="@+id/numero2"
        style="@style/lblNumber.Black"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="number" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnResta"
        android:layout_alignBaseline="@+id/btnSuma"
        android:layout_alignBottom="@+id/btnSuma"
        android:layout_toRightOf="@+id/btnSuma"
        android:onClick="btnRestaOnClick"
        android:text="@string/resta"
        style="@style/button" />

    <Button
        android:id="@+id/btnMultiplicacion"
        android:layout_alignBaseline="@+id/btnResta"
        android:layout_alignBottom="@+id/btnResta"
        android:layout_toRightOf="@+id/btnResta"
        android:onClick="btnMultiplicacionOnClick"
        android:text="@string/multiplicacion"
        style="@style/button"
         />

    <Button
        android:id="@+id/btnDivision"
        android:layout_alignTop="@+id/btnMultiplicacion"
        android:layout_toRightOf="@+id/btnMultiplicacion"
        android:onClick="btnDivisionOnClick"
        android:text="@string/division"
        style="@style/button" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_alignLeft="@+id/numero2"
        android:layout_below="@+id/numero2"
        android:layout_marginTop="25dp"
        android:onClick="btnSumaOnClick"
        android:text="@string/suma"
        style="@style/button" />

    <TextView
        android:id="@+id/textView1"
        style="@style/lblNumber.Blue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="21dp"
        android:text="@string/numero1" />

</RelativeLayout>
